03/03/15-09:33:18: Added variable for number of transactions. Using signal threshold of 0.8 for simple strategy test.
03/03/15-09:38:40: Added support for num deals computation in strategy eval.
03/03/15-11:27:03: Tested training with recomputation of Ft and Rt after theta update.
03/03/15-17:36:55: Tested with signal adaptation set to 0.02 => This has no effect (it is not used.).
03/03/15-20:14:45: Adding generic implementation of costfunction.
03/03/15-21:19:48: Tested with signal mean length set to 50 -> This will reduce the final wealth.
03/03/15-21:21:35: Merged changes.
03/04/15-00:12:48: Added proper implementation for generic cost function and train context.
03/04/15-00:43:42: Minor lyaout update.
03/04/15-02:04:10: Added initial implementation for DDR cost function. Preparing test for proper index in loadState.
03/04/15-11:52:38: Fixed input to loadState. Still testing with initial implementation.
03/04/15-20:56:21: Added long strategy evaluation test.
03/04/15-22:01:05: Added long test with signal threshold set to 0.0.
03/05/15-10:42:29: Performed test 13 with M1 and tcost=0.000001, threshold=0.0.
03/05/15-12:55:05: Removed vector test files from repository.
03/05/15-13:52:49: Started cleaning of TrainContext implementation.
03/05/15-16:31:40: Added implementation for DDR cost function.
03/05/15-15:06:20: Added Test 14 for 14 input returns.
03/05/15-19:09:44: Added test 15 with DDR cost function. Adding predict method in cost function.
03/05/15-17:46:19: Added test 16: evaluation with DDR cost function and 14 input returns.
03/05/15-20:38:17: Added test 17 - SR cost function with 20 input returns.
03/05/15-22:43:10: Merged files
03/06/15-00:02:58: Added train algorithm support.
03/06/15-01:36:38: Minimal correction on _len in TrainContext to for online training support.
03/06/15-14:01:43: Added SImpleRNG class. Doing some tests on generated prices.
03/07/15-23:49:09: Merged changes on SimpleRNG integration.