@@ -1,270 +1,0 @@
-<!doctype html>
-<html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <title>My Test results</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.no-icons.min.css" /> -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
-    <!-- <link rel="stylesheet" href="css/bootstrap.no-icons.min.css" /> -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" />
-    <!-- <link rel="stylesheet" href="css/font-awesome.css" /> -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <!-- <link rel="stylesheet" href="styles/main.css"> -->
-    <!-- endbuild -->
-  </head>
-  <body ng-app="myModule">
-
-    <div ng-controller="ctrlRead" class="container-fluid">
-      <div class="row">
-
-        <h1 class="col-md-10 col-md-offset-1">Test results on 24/02/2015 at 21:58:20</h1>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-4 col-xs-offset-4 alert alert-success" role="alert"
-             ng-class="{'alert-warning' : passedRatio > 0.9 && passedRatio < 1.0, 'alert-success': passedRatio==1.0, 'alert-danger': passedRatio <= 0.9}">Passed {{numPassed}}/{{numTests}} tests ({{100*numPassed/numTests|number:2}}%).</div>
-      </div>
-
-      <div class="col-md-10 col-md-offset-1">
-      <!-- <div class="col-md-12"> -->
-<!--         <pre>pagedItems.length: {{pagedItems.length|json}}</pre>
-        <pre>currentPage: {{currentPage|json}}</pre>
-        <pre>currentPage: {{sort|json}}</pre> -->
-
-        <table class="table table-striped table-condensed table-hover">
-          <thead>
-            <tr>
-                <th class="id" custom-sort order="'id'" sort="sort">Id&nbsp;</th>
-                <th class="sname" custom-sort order="'sname'" sort="sort">Suite&nbsp;</th>
-                <th class="name" custom-sort order="'name'" sort="sort">Name&nbsp;</th>
-                <th class="duration" custom-sort order="'duration'" sort="sort">Duration&nbsp;</th>
-                <th class="status" custom-sort order="'status'" sort="sort">Status&nbsp;</th>
-            </tr>
-          </thead>
-          <tfoot>
-            <td colspan="5">
-                <nav align="center">
-                    <ul class="pagination">
-                        <li ng-class="{disabled: currentPage == 0}">
-                            <a href ng-click="prevPage()">« Prev</a>
-                        </li>
-                    
-                        <li ng-repeat="n in range(pagedItems.length, currentPage, currentPage + gap) "
-                            ng-class="{active: n == currentPage}"
-                        ng-click="setPage()">
-                            <a href ng-bind="n + 1">1</a>
-                        </li>
-                     
-                        <li ng-class="{disabled: (currentPage) == pagedItems.length - 1}">
-                            <a href ng-click="nextPage()">Next »</a>
-                        </li>
-                    </ul>
-                </nav>
-            </td>
-          </tfoot>
-          <tbody>
-            <tr ng-repeat="item in pagedItems[currentPage] | orderBy:sort.sortingOrder:sort.reverse"
-                ng-class="{'success': item.status=='PASSED', 'danger': item.status=='FAILED'}">
-                <td>{{item.id}}</td>
-                <td>{{item.sname}}</td>
-                <td><h4>{{item.name}}</h4>
-                    <ul>
-                        <li ng-repeat="msg in item.messages">
-                            {{msg.time}} : {{msg.content}}
-                        </li>
-                    </ul>
-<!--                     <div>This is the message list.
-                    </div> -->
-                </td>
-                <td>{{item.duration}} s</td>
-                <td>{{item.status}}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-    <script src="http://code.angularjs.org/1.1.0/angular.min.js"></script>
-    <!-- // <script src="js/angular.min.js"></script> -->
-    <script>
-var fessmodule = angular.module('myModule', []);
-
-fessmodule.controller('ctrlRead', function ($scope, $filter) {
-
-    // init
-    $scope.sort = {       
-                sortingOrder : 'id',
-                reverse : false
-            };
-    
-    $scope.gap = 5;
-    
-    $scope.filteredItems = [];
-    $scope.groupedItems = [];
-    $scope.itemsPerPage = 10;
-    $scope.pagedItems = [];
-    $scope.currentPage = 0;
-    $scope.items = [
-{id:1,sname:"Sanity checks",name:"should failed on 1==0",duration:0.000,status:"PASSED",messages:[]},
-{id:2,sname:"Sanity checks",name:"should display message if applicable",duration:0.000,status:"PASSED",messages:[]},
-{id:3,sname:"Sanity checks",name:"should take some time to perform long operation",duration:0.000,status:"PASSED",messages:[
-{content:"res = 1.03239927159599",severity:"INFO",file:"sanity_specs.mqh",line:87,time:"2015.02.24 21:58:20"}]},
-{id:4,sname:"Sanity checks",name:"should allow conversion of datetime to number of seconds",duration:0.000,status:"PASSED",messages:[
-{content:"val1 = 332857827",severity:"INFO",file:"sanity_specs.mqh",line:97,time:"2015.02.24 21:58:20"},
-{content:"val2 = 332857837",severity:"INFO",file:"sanity_specs.mqh",line:98,time:"2015.02.24 21:58:20"}]},
-{id:5,sname:"Sanity checks",name:"should allow manipulating array references",duration:0.000,status:"PASSED",messages:[]},
-{id:6,sname:"Sanity checks",name:"should support deleting a null pointer",duration:0.000,status:"PASSED",messages:[]},
-{id:7,sname:"Sanity checks",name:"should support deleting a pointer twice",duration:0.000,status:"PASSED",messages:[]},
-{id:8,sname:"Sanity checks",name:"should keep references on pointers.",duration:0.000,status:"PASSED",messages:[]},
-{id:9,sname:"Log system",name:"should have a valid log manager pointer",duration:0.000,status:"PASSED",messages:[]},
-{id:10,sname:"Log system",name:"should support creating a LogRecord",duration:0.000,status:"PASSED",messages:[]},
-{id:11,sname:"Log system",name:"should support logging messages",duration:0.000,status:"PASSED",messages:[]},
-{id:12,sname:"Object class",name:"should allow creation of sample object",duration:0.000,status:"PASSED",messages:[]},
-{id:13,sname:"StringStream class",name:"should accept object as input",duration:0.000,status:"PASSED",messages:[]},
-{id:14,sname:"StringStream class",name:"should accept object pointer as input",duration:0.000,status:"PASSED",messages:[]},
-{id:15,sname:"StringStream class",name:"should support common types",duration:0.000,status:"PASSED",messages:[]},
-{id:16,sname:"nvObject class",name:"should detect dynamic pointer",duration:0.000,status:"PASSED",messages:[]}
-    ];
-
-    // Compute the number of passed/failed tests:
-    $scope.numTests = $scope.items.length;
-    $scope.numPassed = 0;
-
-    var count = $scope.items.length;
-    for (var i = 0; i < count; i++) {
-      if($scope.items[i].status=="PASSED") {
-        $scope.numPassed++;
-      }
-    }
-
-    $scope.numFailed = $scope.numTests - $scope.numPassed;
-    $scope.passedRatio = $scope.numPassed/$scope.numTests;
-
-
-    var searchMatch = function (haystack, needle) {
-        if (!needle) {
-            return true;
-        }
-        return haystack.toLowerCase().indexOf(needle.toLowerCase()) !== -1;
-    };
-
-    // init the filtered items
-    $scope.search = function () {
-        $scope.filteredItems = $filter('filter')($scope.items, function (item) {
-            for(var attr in item) {
-                if (searchMatch(item[attr], $scope.query))
-                    return true;
-            }
-            return false;
-        });
-        // take care of the sorting order
-        if ($scope.sort.sortingOrder !== '') {
-            $scope.filteredItems = $filter('orderBy')($scope.filteredItems, $scope.sort.sortingOrder, $scope.sort.reverse);
-        }
-        $scope.currentPage = 0;
-        // now group by pages
-        $scope.groupToPages();
-    };
-    
-  
-    // calculate page in place
-    $scope.groupToPages = function () {
-        $scope.pagedItems = [];
-        
-        for (var i = 0; i < $scope.filteredItems.length; i++) {
-            if (i % $scope.itemsPerPage === 0) {
-                $scope.pagedItems[Math.floor(i / $scope.itemsPerPage)] = [ $scope.filteredItems[i] ];
-            } else {
-                $scope.pagedItems[Math.floor(i / $scope.itemsPerPage)].push($scope.filteredItems[i]);
-            }
-        }
-    };
-    
-    $scope.range = function (size, start, end) {
-        var ret = [];        
-        console.log(size,start, end);
-                      
-        if (size < end) {
-            end = size;
-            start = Math.max(size-$scope.gap,0);
-        }
-        for (var i = start; i < end; i++) {
-            ret.push(i);
-        }        
-         console.log(ret);        
-        return ret;
-    };
-    
-    $scope.prevPage = function () {
-        if ($scope.currentPage > 0) {
-            $scope.currentPage--;
-        }
-    };
-    
-    $scope.nextPage = function () {
-        if ($scope.currentPage < $scope.pagedItems.length - 1) {
-            $scope.currentPage++;
-        }
-    };
-    
-    $scope.setPage = function () {
-        $scope.currentPage = this.n;
-    };
-
-    // functions have been describe process the data for display
-    $scope.search();
-
-   
-
-});
-
-
-fessmodule.$inject = ['$scope', '$filter'];
-
-fessmodule.directive("customSort", function() {
-return {
-    restrict: 'A',
-    transclude: true,    
-    scope: {
-      order: '=',
-      sort: '='
-    },
-    template : 
-      ' <a ng-click="sort_by(order)" style="color: #555555;">'+
-      '    <span ng-transclude></span>'+
-      '    <i ng-class="selectedCls(order)"></i>'+
-      '</a>',
-    link: function(scope) {
-                
-    // change sorting order
-    scope.sort_by = function(newSortingOrder) {       
-        var sort = scope.sort;
-        
-        if (sort.sortingOrder == newSortingOrder){
-            sort.reverse = !sort.reverse;
-        }                    
-
-        sort.sortingOrder = newSortingOrder;        
-    };
-    
-   
-    scope.selectedCls = function(column) {
-        if(column == scope.sort.sortingOrder){
-            return ('icon-chevron-' + ((scope.sort.reverse) ? 'down' : 'up'));
-        }
-        else{            
-            return'icon-sort' 
-        } 
-    };      
-  }// end link
-}
-});
-    </script>
-  </body>
-</html>
